--- a/Campfire/Info.plist
+++ b/Campfire/Info.plist
@@ -45,5 +45,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>To update the map.</string>
 </dict>
 </plist>
